# sampler-pro

./: .gitignore  CMakeLists.txt  README.md  build_log.txt
Source/: AudioAnalysis.cpp  AudioAnalysis.h  AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiSequencerComponent.h  WaveformComponent.h
